--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,7 @@ img {
     width: 80%;
     height: 100%;
     padding: 2rem;
-    background-color: rgba(112, 184, 251, 0.8);
+    background-color: white;
     transition: 0.5s;
   }
 }
@@ -303,7 +303,7 @@ img {
   display: none;
   border: 1px solid dodgerblue;
   background-color: #f2f2f2;
-  border-radius: 50%;
+  border-radius: 10%;
   z-index: 100;
 }
 .bxs-up-arrow {
@@ -415,64 +415,6 @@ img {
     width: 0%;
   }
 }
-@media (max-width: 500px) {
-  .l-header {
-    background-image: url("../img/theBack_3.png");
-    background-size: cover;
-  }
-  .enter-button {
-    margin-left: -20px;
-  }
-  .home__title {
-    /* font-size: 44px;
-    padding: 90px 80px 0px 60px; */
-    font-size: 45px;
-    text-align: center;
-    padding: 60px 0px 0px 0px;
-    margin-bottom: 15px;
-  }
-  .home {
-    background-image: url("../img/theBack_2.png");
-    background-size: cover;
-  }
-  .welcome-section {
-    text-align: center;
-  }
-}
-@media (orientation: portrait) and (max-width: 414px) {
-  .l-header {
-    background-image: url("../img/theBack_2.2.png");
-    background-size: cover;
-  }
-  .home__title {
-    font-size: 32px;
-    text-align: center;
-    padding: 30px 0px 0px 0px;
-    margin-bottom: 15px;
-  }
-  .theButton {
-    margin-left: 110px;
-  }
-}
-@media (orientation: portrait) and (max-width: 375px) {
-  .l-header {
-    background-image: url("../img/theBack_2.2.png");
-    background-size: cover;
-  }
-  .home {
-    background-image: url("../img/theBack_2.3.png");
-    background-size: cover;
-  }
-  .home__title {
-    font-size: 35px;
-    text-align: center;
-    padding: 30px 0px 0px 0px;
-    margin-bottom: 15px;
-  }
-  .theButton {
-    margin-left: 100px;
-  }
-}
 
 /* ===== MEDIA QUERIES=====*/
 @media screen and (min-width: 768px) {
@@ -559,5 +501,73 @@ img {
   }
   .home__img {
     right: 10%;
+  }
+}
+
+@media (max-width: 500px) {
+  .l-header {
+    background-image: url("../img/theBack_3.png");
+    background-size: cover;
+  }
+  .enter-button {
+    margin-left: -20px;
+  }
+  .home__title {
+    /* font-size: 44px;
+    padding: 90px 80px 0px 60px; */
+    font-size: 45px;
+    text-align: center;
+    padding: 60px 0px 0px 0px;
+    margin-bottom: 15px;
+  }
+  .home {
+    background-image: url("../img/theBack_2.png");
+    background-size: cover;
+  }
+  .welcome-section {
+    text-align: center;
+  }
+}
+@media (orientation: portrait) and (max-width: 414px) {
+  .l-header {
+    background-image: url("../img/theBack_2.2.png");
+    background-size: cover;
+  }
+  .home__title {
+    font-size: 32px;
+    text-align: center;
+    padding: 30px 0px 0px 0px;
+    margin-bottom: 15px;
+  }
+  .theButton {
+    margin-left: 110px;
+  }
+}
+@media (orientation: portrait) and (max-width: 375px) {
+  .l-header {
+    background-image: url("../img/theBack_2.2.png");
+    background-size: cover;
+  }
+  .home {
+    background-image: url("../img/theBack_2.3.png");
+    background-size: cover;
+  }
+  .home__title {
+    font-size: 25px;
+    text-align: center;
+    padding: 10px 0px 0px 0px;
+    margin-bottom: 15px;
+  }
+  .theButton {
+    margin-left: 100px;
+    padding: 0.6rem 2.2rem;
+  }
+  .welcome-section {
+    font-size: 12.5px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  .footer {
+    font-size: 15px;
   }
 }
