--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -528,7 +528,7 @@ img {
     text-align: center;
   }
 }
-@media (orientation: portrait) and (max-width: 720px) {
+/* @media (orientation: portrait) and (max-width: 720px) {
   .l-header {
     background-image: url("../img/theBack_2.2.png");
     background-size: cover;
@@ -555,7 +555,7 @@ img {
   .footer {
     font-size: 15px;
   }
-}
+} */
 @media (orientation: portrait) and (max-width: 414px) {
   .l-header {
     background-image: url("../img/theBack_2.2.png");
@@ -564,7 +564,7 @@ img {
   .home__title {
     font-size: 32px;
     text-align: center;
-    padding: 30px 0px 0px 0px;
+    padding: 10px 0px 0px 0px;
     margin-bottom: 15px;
   }
   .theButton {
