--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,34 @@ body {
   font-size: var(--normal-font-size);
   color: var(--second-color);
 }
+#consent-popup {
+  position: fixed;
+  top: 7%;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  opacity: 1;
+  transition: opacity 0.8s ease;
+  z-index: 100;
+}
+#consent-popup.hidden {
+  opacity: 0;
+  z-index: -100;
+}
+.theBtn {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  background-color: #70b8fb;
+  border-radius: 4px;
+  cursor: pointer;
+  height: 50px;
+  width: 80px;
+  border: none;
+  margin: auto 40px;
+  outline: none;
+}
+
 h1,
 h2,
 p {
@@ -88,7 +116,7 @@ img {
   margin-bottom: var(--mb-4);
   text-align: center;
 }
-.section-title::after {
+/* .section-title::after {
   position: absolute;
   content: "";
   width: 64px;
@@ -98,7 +126,7 @@ img {
   margin: auto;
   top: 2rem;
   background-color: var(--first-color);
-}
+} */
 .section {
   padding-top: 3rem;
   padding-bottom: 2rem;
@@ -527,6 +555,31 @@ img {
   .welcome-section {
     text-align: center;
   }
+  #consent-popup {
+    position: fixed;
+    top: 7%;
+    left: 0;
+    right: 0;
+    padding: 60px;
+    opacity: 1;
+    transition: opacity 0.8s ease;
+  }
+  #consent-popup.hidden {
+    opacity: 0;
+  }
+  .theBtn {
+    position: absolute;
+    top: 120px;
+    right: 40px;
+    background-color: #70b8fb;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 50px;
+    width: 80px;
+    border: none;
+    margin: auto 40px;
+    outline: none;
+  }
 }
 /* @media (orientation: portrait) and (max-width: 720px) {
   .l-header {
@@ -569,6 +622,19 @@ img {
   }
   .theButton {
     margin-left: 110px;
+  }
+  .theBtn {
+    position: absolute;
+    top: 150px;
+    right: 40px;
+    background-color: #70b8fb;
+    border-radius: 4px;
+    cursor: pointer;
+    height: 50px;
+    width: 80px;
+    border: none;
+    margin: auto 40px;
+    outline: none;
   }
 }
 @media (orientation: portrait) and (max-width: 375px) {
