--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -307,12 +307,13 @@ img {
   padding: 0.5rem 1rem;
   margin-bottom: var(--mb-4);
   border-radius: 0.5rem;
+  background-color: #f6f6f6;
   box-shadow: 0 4px 25px rgba(14, 36, 49, 0.15);
 }
 .skills__icon {
   font-size: 2rem;
   margin-right: var(--mb-2);
-  color: #70b8fb;
+  color: gold;
 }
 .skills__names {
   display: flex;
@@ -390,8 +391,8 @@ img {
   font-size: var(--normal-font-size);
   font-weight: var(--font-semi);
   padding: 0.2rem;
-  /* border-radius: 0.5rem; */
-  /* border: 1.5px solid var(--second-color); */
+  border-radius: 0.5rem;
+  border: 1.5px solid var(--second-color);
   border: none;
   border-bottom: 1.5px solid var(--second-color);
   outline: none;
@@ -617,6 +618,11 @@ img {
     background-image: url("../img/theBack_2.2.png");
     background-size: cover;
   }
+  .home {
+    background-image: url("../img/theBack_2.2.png");
+    background-size: cover;
+    background-attachment: fixed;
+  }
   .home__title {
     font-size: 32px;
     text-align: center;
@@ -638,6 +644,8 @@ img {
     border: none;
     margin: auto 40px;
     outline: none;
+  }
+  .welcome-section {
   }
 }
 @media (orientation: portrait) and (max-width: 375px) {
