--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,7 +59,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
-  background-image: url("../img/theBack_2.4.png");
+  background-image: url("../img/theBack.png");
   background-size: cover;
   background-attachment: fixed;
 }
@@ -185,13 +185,13 @@ img {
   text-decoration: none;
 }
 .nav__link:hover::after {
-  position: absolute;
+  /* position: absolute;
   content: "";
   width: 100%;
   height: 0.18rem;
   left: 0;
   top: 2rem;
-  background-color: var(--first-color);
+  background-color: var(--first-color); */
 }
 .nav__logo {
   color: var(--second-color);
@@ -224,6 +224,7 @@ img {
   row-gap: 1rem;
   background-image: url("../img/theBack.png");
   background-size: cover;
+  background-attachment: fixed;
 }
 .home__data {
   align-self: center;
@@ -313,7 +314,7 @@ img {
 .skills__icon {
   font-size: 2rem;
   margin-right: var(--mb-2);
-  color: gold;
+  color: dodgerblue;
 }
 .skills__names {
   display: flex;
